--- a/styles/main.css
+++ b/styles/main.css
@@ -22,5 +22,5 @@ limitations under the License.
   width: 200px;
   height: 300px;
   margin: 15px;
-  background-color: blue;
+  background-color: yellow;
 }
